# kopete-pimpresence

./: AUTHORS  Makefile.am  Messages.sh  README  TODO  kopete_pimpresence.desktop  kopete_pimpresence_config.desktop  pimpresenceplugin.cpp  pimpresenceplugin.h  pimpresencepreferences.cpp  pimpresencepreferences.h  pimpresenceprefs.ui
